# cpp-vfs-explorer

./: .gitignore  README.md  cpp-vfs-explorer.pro
core/: .clang-format  CMakeLists.txt  core.pro
core/benchmark/: BenchmarkService.h
core/domain/: VFSDirectory.h  VFSExplorer.h  VFSFile.h  VFSNode.h
core/model/: VFSDirectory.h  VFSFile.h
core/resources/: script.txt
core/resources/benchmark/: BenchmarkService.h
core/resources/files/: Application.java  HangmanApp.java  TextEditorApp.pro  Tiger.txt  document.txt  Конспект_итераторы_C++.docx
core/search/: FileHashMap.h  FileNameTrie.h  Trie.h
core/tests/: VFSExplorerTest.cpp
core/utils/: PathUtils.h  ScriptLoader.h
view/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  view.pro
